# vosk-commands

./: .gitignore  Cargo.toml  LICENSE  build.rs
src/: main.rs  swap.rs
tests/: integration.rs
tests/fixtures/: grammar.json
